v 0.11 (#9)
* Add .circleci/config.yml

* circle CI test

* circle CI test

* circle CI test

* circle CI test

* circle CI test

* NodeDriverHelper cleanup

* start v0.11

* WiP impl of mock network utils

* Minor edits

* minor cleanup

* v0.11